--- a/JuJinMine/app/src/main/res/layout/items_layout.xml
+++ b/JuJinMine/app/src/main/res/layout/items_layout.xml
@@ -5,7 +5,7 @@
 
     <Button
         android:id="@+id/button4"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="20dp"
@@ -13,33 +13,36 @@
         android:text="GoToActivity"
         android:onClick="goToActivity"
         android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"/>
+        android:layout_alignParentLeft="true"
+        android:textAllCaps="false"/>
 
     <Button
         android:id="@+id/button5"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:background="@color/colorPrimary"
         android:text="GoToService"
         android:onClick="goToService"
         android:layout_below="@+id/button4"
-        android:layout_alignLeft="@+id/button4"/>
+        android:layout_alignLeft="@+id/button4"
+        android:textAllCaps="false"/>
 
     <Button
         android:id="@+id/button6"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:background="@color/colorPrimary"
         android:text="GoToContentProvider"
         android:onClick="goToContentProvider"
         android:layout_below="@+id/button5"
-        android:layout_alignLeft="@+id/button4"/>
+        android:layout_alignLeft="@+id/button4"
+        android:textAllCaps="false"/>
 
     <Button
         android:id="@+id/button7"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@android:color/holo_blue_dark"
         android:text="GotoBroadcast"
@@ -47,5 +50,6 @@
         android:layout_marginTop="20dp"
         android:layout_below="@+id/button6"
         android:layout_alignLeft="@+id/button6"
+        android:textAllCaps="false"
         />
 </RelativeLayout>
