--- a/JuJinMine/app/src/main/res/values/colors.xml
+++ b/JuJinMine/app/src/main/res/values/colors.xml
@@ -3,6 +3,6 @@
     <color name="colorPrimary">#596fe8</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="colorMine">#00bbaa</color>
+    <color name="colorMine">#aa88aa</color>
     <color name="colorTest">#0022aa</color>
 </resources>
