--- a/JuJinMine/app/src/main/res/layout/activity_main.xml
+++ b/JuJinMine/app/src/main/res/layout/activity_main.xml
@@ -4,25 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".com.MineActivity">
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginTop="8dp"
-        android:background="@color/colorPrimary"
-        android:onClick="goNext"
-        android:text="MineItem"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"/>
-
+    android:layout_height="match_parent">
 
     <Button
         android:id="@+id/button3"
@@ -32,14 +14,15 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="10dp"
         android:background="@color/colorPrimary"
         android:onClick="goLayout"
-        android:text="Layout"
+        android:text="三大布局"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button"/>
+        app:layout_constraintTop_toTopOf="parent"
+        android:textAllCaps="true"/>
 
     <Button
         android:id="@+id/button2"
@@ -52,11 +35,12 @@
         android:layout_marginTop="8dp"
         android:background="@color/colorPrimary"
         android:onClick="goItems"
-        android:text="Items"
+        android:text="四大组件"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button3"/>
+        app:layout_constraintTop_toBottomOf="@+id/button3"
+        android:textAllCaps="true"/>
 
 
 </android.support.constraint.ConstraintLayout>
