--- a/JuJinMine/app/src/main/res/layout/item_activity_broadcast.xml
+++ b/JuJinMine/app/src/main/res/layout/item_activity_broadcast.xml
@@ -9,7 +9,7 @@
         android:id="@+id/button16"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Send BroadCast"
-        android:textAllCaps="true"
+        android:text="Send Broadcast"
+        android:textAllCaps="false"
         android:onClick="sendBroadcast"/>
 </LinearLayout>
