--- a/JuJinMine/app/src/main/res/layout/activity_main.xml
+++ b/JuJinMine/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,26 @@
         app:layout_constraintTop_toTopOf="parent"
         android:textAllCaps="true"/>
 
+
+    <Button
+        android:id="@+id/button"
+        android:layout_width="0dp"
+        android:layout_height="48dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="7dp"
+        android:background="@color/colorPrimary"
+        android:onClick="goItems"
+        android:text="四大组件"
+        android:textAllCaps="true"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button3"/>
+
+
     <Button
         android:id="@+id/button2"
         android:layout_width="0dp"
@@ -34,13 +54,11 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:background="@color/colorPrimary"
-        android:onClick="goItems"
-        android:text="四大组件"
+        android:onClick="goSaveItems"
+        android:text="五大存储"
+        android:textAllCaps="true"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button3"
-        android:textAllCaps="true"/>
-
-
+        app:layout_constraintTop_toBottomOf="@+id/button"/>
 </android.support.constraint.ConstraintLayout>
