--- a/JuJinMine/app/src/main/res/layout/item_contentprovider_custom.xml
+++ b/JuJinMine/app/src/main/res/layout/item_contentprovider_custom.xml
@@ -38,4 +38,11 @@
         android:text="query"
         android:layout_marginTop="20dp"
         android:onClick="query"/>
+
+    <ListView
+        android:id="@+id/listView_contentProvider"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"></ListView>
 </LinearLayout>
